# white_belt_CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output.txt
headers/: solutions.h
src/: FunctionParts.cpp  LectureTitle.cpp  Person.cpp  Person2.cpp  Person3.cpp  Rational.cpp  ReversibleString.cpp  SortedStrings.cpp  factorial.cpp  funcs.cpp  incognizable.cpp  is_palindrome.cpp  time_server.cpp
